--- a/ProjectManagement/Views/Shared/_Layout.cshtml
+++ b/ProjectManagement/Views/Shared/_Layout.cshtml
@@ -166,8 +166,8 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" asp-controller="Worklog" asp-action="Index">
-                                <i class="bi bi-clock-history"></i> Worklogs
+                            <a class="nav-link" asp-controller="Employee" asp-action="Index">
+                                <i class="bi bi bi-person"></i> Employee
                             </a>
                         </li>
                     </ul>
